--- a/app/src/main/res/layout/detail_movie_activity.xml
+++ b/app/src/main/res/layout/detail_movie_activity.xml
@@ -62,44 +62,26 @@
 
         <ImageView
             android:id="@+id/play_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/play"
-            android:layout_gravity="center"/>
+            style="@style/play_icon"
+            android:src="@drawable/play" />
 
-        <View style="@style/divider"
-            android:layout_marginBottom="24dp"/>
+        <View
+            style="@style/divider"
+            android:layout_marginBottom="24dp" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <LinearLayout style="@style/linear_parent_style">
 
             <Button
                 android:id="@+id/review_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                style="@style/buttons"
                 android:layout_marginRight="32dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:background="@color/colorAccent"
-                android:text="@string/movie_reviews"
-                android:textStyle="bold" />
+                android:text="@string/movie_reviews" />
 
             <ToggleButton
                 android:id="@+id/favorite_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:background="@color/colorAccent"
-                android:textOn="Added!"
-                android:textOff="Add to favorites"
-                android:textStyle="bold" />
-
+                style="@style/buttons"
+                android:textOff="@string/favorite_button"
+                android:textOn="@string/added_favorite_button" />
         </LinearLayout>
-
-
     </LinearLayout>
 </ScrollView>
